test: wrote missing tests and cleaned up some code